--- a/src/style.css
+++ b/src/style.css
@@ -1,61 +1,32 @@
-div {
-  display: block;
-}
 body {
-  margin: 0;
-  font-family: Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans,
-    Segoe UI Emoji, Segoe UI Symbol;
-  font-size: 1rem;
-  font-weight: 400;
-  line-height: 1.5;
-  color: #212529;
-  text-align: left;
-}
-.weather h1 {
-  margin: 20px 0 10px;
-  font-weight: 700;
-  font-size: 38px;
-  line-height: 48px;
-  color: #272142;
-}
-h1 {
-  display: block;
-  margin-block-start: 0.67em;
-  margin-block-end: 0.67em;
-  margin-inline-start: 0px;
-  margin-inline-end: 0px;
-  font-size: 2em;
-  font-weight: bold;
-}
-.weather {
-  font-family: Cerebri-Sans, Helvetica, Arial, sans-serif;
-  color: #878787;
-}
-.WeatherForecast {
-  text-align: center;
-  margin: 40px 0;
-  border-bottom: 1px solid #f9f7fe;
-  padding-bottom: 50px;
-}
-.WeatherForecast .forecast-temperature {
-  font-style: normal;
-  font-size: 18px;
-  line-height: 1.5;
-  color: #f65282;
-  font-weight: 700;
-}
-.WeatherForecast .forecast-temperature-min {
-  margin-left: 10px;
-  opacity: 0.6;
+  font-family: "Google Sans", arial, sans-serif;
 }
 
-.WeatherForecast .forecast-time {
-  font-size: 16px;
-  line-height: 20px;
-  text-align: center;
-  color: rgba(39, 33, 66, 0.4);
+.weather-app {
+  max-width: 600px;
+  margin: 30px auto;
+  padding: 20px;
+  border: 1px solid #dadde1;
+  border-radius: 5px;
 }
-.Weather .WeatherForecast canvas {
-  display: block;
-  margin: 20px auto;
+
+h1 {
+  color: #878787;
+  font-size: 22px;
+  font-weight: 400;
+  line-height: 26px;
+  margin-bottom: 0;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  list-style: none;
+  color: rgb(154, 160, 166);
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 20px;
 }
