--- a/src/style.css
+++ b/src/style.css
@@ -60,3 +60,9 @@ li {
   font-size: 16px;
   top: -12px;
 }
+
+.weather-temperature .active {
+  color: rgb(33, 33, 33);
+  cursor: default;
+  text-decoration: none;
+}
