--- a/src/style.css
+++ b/src/style.css
@@ -1,13 +1,14 @@
 body {
-  font-family: "Google Sans", arial, sans-serif;
+  font-family: "Merriweather";
+  background: #fae19b;
 }
 
 h1 {
-  color: #878787;
-  font-size: 22px;
+  font-size: 44px;
   font-weight: 400;
   line-height: 26px;
-  margin-bottom: 0;
+  margin-bottom: 30px;
+  margin-top: 40px;
 }
 
 ul {
@@ -17,10 +18,11 @@ ul {
 
 li {
   list-style: none;
-  color: rgb(154, 160, 166);
+
   font-size: 16px;
-  font-weight: 400;
+  font-weight: 300;
   line-height: 20px;
+  font-style: italic;
 }
 
 #description:first-letter {
@@ -33,9 +35,11 @@ li {
 }
 
 .weather-app {
-  padding: 20px;
-  border: 1px solid #dadde1;
+  padding: 40px;
+  border: 5px solid #49beb7;
   border-radius: 5px;
+  background: #085f63;
+  color: #fff;
 }
 
 .overview {
@@ -49,7 +53,6 @@ li {
 }
 
 .weather-temperature strong {
-  color: blueviolet;
   font-size: 48px;
   font-weight: 400;
   line-height: 1;
@@ -62,7 +65,6 @@ li {
 }
 
 .weather-temperature .active {
-  color: rgb(33, 33, 33);
   cursor: default;
   text-decoration: none;
 }
@@ -70,7 +72,6 @@ li {
 .weather-forecast {
   margin-top: 20px;
   text-align: center;
-  color: black;
 }
 
 .weather-forecast-date {
@@ -84,4 +85,16 @@ li {
 
 .weather-forecast-temperature-min {
   opacity: 0.5;
+}
+
+small {
+  color: #ff5959;
+}
+
+a {
+  color: #ff5959;
+}
+
+a:hover {
+  color: #ff5959;
 }
